add fix for illegal reflective access to Dockerfile; update path mapping in ForwardToFrontend